k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-monitor
  labels:
    app: uptime-monitor
